[package]
name = "byte-trie"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
itertools = "0.13"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.6"
pyo3 = { version = "0.23", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"
art-tree = "0.2"
patricia_tree = "0.8"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "benchmark"
harness = false
